--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -42,8 +42,8 @@ text = "CellForeground"
 [env]
 TERM = "xterm-256color"
 
-[terminal.shell]
-program = "/bin/zsh"
+# [terminal.shell]
+# program = "/bin/zsh"
 
 [font]
 size = 12
