--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -48,8 +48,8 @@ TERM = "xterm-256color"
 [font]
 size = 12
 
-# [font.normal]
-# family = "MesloLGL Nerd Font"
+[font.normal]
+family = "MesloLGL Nerd Font"
 
 [font.offset]
 x = 0
