--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -55,11 +55,6 @@ family = "MesloLGL Nerd Font"
 x = 0
 y = 0
 
-[[keyboard.bindings]]
-chars = "#"
-key = "Key3"
-mods = "Alt"
-
 # [window]
 # decorations = "buttonless"
 # option_as_alt = "Both"
@@ -70,6 +65,7 @@ y = 5
 
 [keyboard]
 bindings = [
+  { key = "3", mods = "Alt", chars = "#" },
   { key = "K", mods = "Command", action = "ClearHistory" },
   { key = "V", mods = "Command", action = "Paste" },
   { key = "C", mods = "Command", action = "Copy" },
